; ModuleID = '/home/carl/AnghaBench/git/extr_upload-pack.c_has_unreachable.c'
source_filename = "/home/carl/AnghaBench/git/extr_upload-pack.c_has_unreachable.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.child_process = type { i32 }
%struct.object_array = type { i32 }

@CHILD_PROCESS_INIT = common dso_local global %struct.child_process zeroinitializer, align 4
@SIGPIPE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.object_array*)* @has_unreachable to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @has_unreachable(%struct.object_array* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca %struct.object_array*, align 8
  %4 = alloca %struct.child_process, align 4
  %5 = alloca [1 x i8], align 1
  %6 = alloca i32, align 4
  store %struct.object_array* %0, %struct.object_array** %3, align 8
  %7 = bitcast %struct.child_process* %4 to i8*
  call void @llvm.memcpy.p0i8.p0i8.i64(i8* align 4 %7, i8* align 4 bitcast (%struct.child_process* @CHILD_PROCESS_INIT to i8*), i64 4, i1 false)
  %8 = load %struct.object_array*, %struct.object_array** %3, align 8
  %9 = call i64 @do_reachable_revlist(%struct.child_process* %4, %struct.object_array* %8, i32* null)
  %10 = icmp slt i64 %9, 0
  br i1 %10, label %11, label %12

11:                                               ; preds = %1
  store i32 1, i32* %2, align 4
  br label %40

12:                                               ; preds = %1
  %13 = getelementptr inbounds %struct.child_process, %struct.child_process* %4, i32 0, i32 0
  %14 = load i32, i32* %13, align 4
  %15 = getelementptr inbounds [1 x i8], [1 x i8]* %5, i64 0, i64 0
  %16 = call i32 @read_in_full(i32 %14, i8* %15, i32 1)
  store i32 %16, i32* %6, align 4
  %17 = load i32, i32* %6, align 4
  %18 = icmp ne i32 %17, 0
  br i1 %18, label %19, label %20

19:                                               ; preds = %12
  br label %29

20:                                               ; preds = %12
  %21 = getelementptr inbounds %struct.child_process, %struct.child_process* %4, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @close(i32 %22)
  %24 = getelementptr inbounds %struct.child_process, %struct.child_process* %4, i32 0, i32 0
  store i32 -1, i32* %24, align 4
  %25 = call i64 @finish_command(%struct.child_process* %4)
  %26 = icmp ne i64 %25, 0
  br i1 %26, label %27, label %28

27:                                               ; preds = %20
  br label %29

28:                                               ; preds = %20
  store i32 0, i32* %2, align 4
  br label %40

29:                                               ; preds = %27, %19
  %30 = load i32, i32* @SIGPIPE, align 4
  %31 = call i32 @sigchain_pop(i32 %30)
  %32 = getelementptr inbounds %struct.child_process, %struct.child_process* %4, i32 0, i32 0
  %33 = load i32, i32* %32, align 4
  %34 = icmp sge i32 %33, 0
  br i1 %34, label %35, label %39

35:                                               ; preds = %29
  %36 = getelementptr inbounds %struct.child_process, %struct.child_process* %4, i32 0, i32 0
  %37 = load i32, i32* %36, align 4
  %38 = call i32 @close(i32 %37)
  br label %39

39:                                               ; preds = %35, %29
  store i32 1, i32* %2, align 4
  br label %40

40:                                               ; preds = %39, %28, %11
  %41 = load i32, i32* %2, align 4
  ret i32 %41
}

; Function Attrs: argmemonly nounwind willreturn
declare void @llvm.memcpy.p0i8.p0i8.i64(i8* noalias nocapture writeonly, i8* noalias nocapture readonly, i64, i1 immarg) #1

declare dso_local i64 @do_reachable_revlist(%struct.child_process*, %struct.object_array*, i32*) #2

declare dso_local i32 @read_in_full(i32, i8*, i32) #2

declare dso_local i32 @close(i32) #2

declare dso_local i64 @finish_command(%struct.child_process*) #2

declare dso_local i32 @sigchain_pop(i32) #2


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
